--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>18</version>
-  </parent>
+<!--  <parent>-->
+<!--    <groupId>org.apache</groupId>-->
+<!--    <artifactId>apache</artifactId>-->
+<!--    <version>18</version>-->
+<!--  </parent>-->
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.pulsar.ecosystem</groupId>
   <artifactId>pulsar-io-lakehouse</artifactId>
-  <version>2.11.0-SNAPSHOT</version>
+  <version>2.11.0-dataos.1</version>
   <name>Pulsar Ecosystem :: IO Connector :: Lake House</name>
   <description>It is a lakehouse connector streaming convert data between lakehouse and Apache Pulsar.</description>
 
